fixed alignment for reset password

--- a/Final Project/TEAMRICHARDS/USERVICE/static/css/login.css
+++ b/Final Project/TEAMRICHARDS/USERVICE/static/css/login.css
@@ -3,7 +3,6 @@
     padding-left: 40%;
 }
 
-#email {
-  margin-top: 20%;
-  margin-left: 2%;
+.center p {
+  margin-top: 30%;
 }
